0.2.10
	- Added assistant which can download the shareware episode
	- Implemented fire wheel bot (LP: #242134)
0.2.9
	- Implemented fan wheels (LP: #242128)
	- No more solid parts behind cameras (LP: #242133)
	- Added fullscreen mode (LP: #245274)
	- Implemented glove slot which can expand floor
	- Soda can flys away when shot by hero (LP: #242118)
	- Freenukum can now also load lowercase named data files (LP: #245269)
0.2.8
	- Fixing compile bug on AMD64 (LP: #244763)
0.2.7
	- Implemented shots by enemies (LP: #243990)
	- Implemented bombs (LP: #242116)
	- Removed dependency on glib (LP: #243956)
	- Added background (LP: #240832)
	- Added particle fireworks (LP: #242117)
	- Added menu shortcut .desktop file
	- Added tankbot (LP: #241105)
0.2.6
	- Using BitsPerPixel and SDL-Flags from initial screen (LP: #243352)
	- Calling SDL_Quit on exit of the program (LP: #243597)
	- Distribution tarball includes manpage (LP: #243296)
	- fn_test_* programs can now be compiled using
	  ./configure --enable-testprograms
0.2.5
	- Made freenukum compile on AMD64 (LP: #242228)
0.2.4
	- Implemented flamethrower
	- Shots can no longer go through solid parts
	- Added ACME stone
	- Added Manpage
	- Implemented mines
	- Implemented floor which crashes when hero steps upon it twice
0.2.3
	- Implemented balloons
	- Implemented wall-crawling green bots
	- When hero gets hurt he has an immunity phase before he is hurt again
	- Made it possible to change to other episodes (if installed).
0.2.2
	- Implemented simple robot
	- Made hero motion model more similar to original game.
	- Elevators implemented
0.2.1
	- Hero can fetch guns for more firepower.
	- Hero can fetch boots and then jump higher.
	- Hero can use teleporters.
	- Hero can shoot boxes.
	- Keyhole stops blinking after key insert.
	- Hero can walk through opened doors immediately instead of having
	  to wait until the animation finishes.
	- Hero earns score for fetching keys.
	- Keys can now be used.