@@ -1,3 +1,4 @@
+	- Added rotating mill (LP: #242120)
 0.2.10
 	- Added assistant which can download the shareware episode
 	- Implemented fire wheel bot (LP: #242134)
